footer alignment fixed

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -364,6 +364,7 @@ p.phone {
   color: #ffffff;
   font-size: 18px;
   transition: color 0.3s;
+  margin-left: 0;
 }
 
 .footer-col ul li a:hover {
@@ -396,6 +397,7 @@ p.phone {
 
 .footer-col ul li {
   margin: 10px;
+  margin-left: 0;
 }
 
 .footer-col form {
